--- a/conway_immobilizer.ipynb
+++ b/conway_immobilizer.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "from __future__ import division\n",
-    "import random"
+    "import random\n",
+    "import itertools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -54,12 +55,13 @@
     "            cards = self.random_order()\n",
     "        self._piles = {}\n",
     "        self._piles[Pos.LEFT] = cards[:cards.index(0)]\n",
-    "        self._piles[Pos.CENTER] = cards[cards.index(0) + 1 : cards.index(1)]\n",
-    "        self._piles[Pos.RIGHT] = cards[cards.index(1) + 1:]\n",
+    "        cards = cards[cards.index(0)+1:]\n",
+    "        self._piles[Pos.CENTER] = cards[:cards.index(0)]\n",
+    "        self._piles[Pos.RIGHT] = cards[cards.index(0) + 1:]\n",
     "        self.move_count = 0\n",
     "        \n",
     "    def random_order(self):\n",
-    "        cards = [Card.KING, Card.QUEEN, Card.JACK, 0, 1]\n",
+    "        cards = [Card.KING, Card.QUEEN, Card.JACK, 0, 0]\n",
     "        random.shuffle(cards)\n",
     "        return cards\n",
     "    \n",
@@ -67,18 +69,18 @@
     "        return {pos: get_or_none(self._piles[pos]) for pos in [Pos.LEFT, Pos.CENTER, Pos.RIGHT]} \n",
     "    \n",
     "    def win_condition(self):\n",
-    "        return self._piles[pos.LEFT] == [Card.king, Card.queen, Card.jack]\n",
+    "        return self._piles[Pos.LEFT] == [Card.KING, Card.QUEEN, Card.JACK]\n",
     "    \n",
     "    def move(self, from_pos, to_pos):\n",
     "        if get_or_none(self._piles[from_pos]):\n",
-    "            self._piles[to_pos] = self._piles[from_pos:1] + self._piles[to_pos]\n",
-    "            self._piles[from_pos] = self._piles[1:]\n",
-    "            self.move_count += 1 "
+    "            self._piles[to_pos] = self._piles[from_pos][:1] + self._piles[to_pos]\n",
+    "            self._piles[from_pos] = self._piles[from_pos][1:]\n",
+    "        self.move_count += 1 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -88,6 +90,123 @@
     "    if l:\n",
     "        return l[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def test_algorithm(alg):\n",
+    "    game = Game()\n",
+    "    print game.view_board()\n",
+    "    while game.move_count < 100 and not game.win_condition():\n",
+    "        game.move(*alg(game.view_board()))\n",
+    "    if game.win_condition():\n",
+    "        print \"CONGRATS YOU WON!\"\n",
+    "        return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def test_all_starts(alg):\n",
+    "    loss_win =[0,0]\n",
+    "    for start in itertools.permutations([Card.KING, Card.QUEEN, Card.JACK, 0, 0]):\n",
+    "        game = Game(start)\n",
+    "        while game.move_count < 10000 and not game.win_condition():\n",
+    "            game.move(*alg(game.view_board()))\n",
+    "        loss_win[game.win_condition()] += 1\n",
+    "    print \"Won: %d\\nLost: %d\" % (loss_win[True], loss_win[False]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def random_move(_state):\n",
+    "    from_pos, to_pos = random.sample([Pos.LEFT, Pos.CENTER, Pos.RIGHT], 2)\n",
+    "    return from_pos, to_pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Won: 0\n",
+      "Lost: 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_all_starts(random_move)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: None, 1: 'J', 2: 'Q'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_algorithm(random_move)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
