fix type error on win condition

--- a/conway_immobilizer.ipynb
+++ b/conway_immobilizer.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -53,6 +53,7 @@
     "    def __init__(self, cards=None):\n",
     "        if not cards:\n",
     "            cards = self.random_order()\n",
+    "        cards = list(cards)\n",
     "        self._piles = {}\n",
     "        self._piles[Pos.LEFT] = cards[:cards.index(0)]\n",
     "        cards = cards[cards.index(0)+1:]\n",
@@ -93,16 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def test_algorithm(alg):\n",
-    "    game = Game()\n",
+    "    game = Game([Card.KING, Card.QUEEN, Card.JACK, 0, 0])\n",
     "    print game.view_board()\n",
-    "    while game.move_count < 100 and not game.win_condition():\n",
+    "    while game.move_count < 120 and not game.win_condition():\n",
     "        game.move(*alg(game.view_board()))\n",
     "    if game.win_condition():\n",
     "        print \"CONGRATS YOU WON!\"\n",
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -120,17 +121,20 @@
    "source": [
     "def test_all_starts(alg):\n",
     "    loss_win =[0,0]\n",
+    "    loss_win_2 =[0,0]\n",
     "    for start in itertools.permutations([Card.KING, Card.QUEEN, Card.JACK, 0, 0]):\n",
     "        game = Game(start)\n",
-    "        while game.move_count < 10000 and not game.win_condition():\n",
+    "        loss_win_2[game.win_condition()] += 1\n",
+    "        while game.move_count < 1000 and not game.win_condition():\n",
     "            game.move(*alg(game.view_board()))\n",
     "        loss_win[game.win_condition()] += 1\n",
-    "    print \"Won: %d\\nLost: %d\" % (loss_win[True], loss_win[False]) "
+    "    print \"Won: %d\\nLost: %d\" % (loss_win[True], loss_win[False]) \n",
+    "    print \"Won: %d\\nLost: %d\" % (loss_win_2[True], loss_win_2[False]) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -143,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -152,8 +156,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Won: 0\n",
-      "Lost: 120\n"
+      "Won: 115\n",
+      "Lost: 5\n",
+      "Won: 2\n",
+      "Lost: 118\n"
      ]
     }
    ],
@@ -163,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -172,16 +178,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: None, 1: 'J', 2: 'Q'}\n"
+      "{0: 'K', 1: None, 2: None}\n",
+      "CONGRATS YOU WON!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,6 +204,81 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<itertools.permutations at 0x1057ecd10>"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "itertools.permutations([Card.KING, Card.QUEEN, Card.JACK, 0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(Card.KING, Card.QUEEN, Card.JACK, 0, 0) in itertools.permutations([Card.KING, Card.QUEEN, Card.JACK, 0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "perms = itertools.permutations([Card.KING, Card.QUEEN, Card.JACK, 0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
