--- a/conway_immobilizer.ipynb
+++ b/conway_immobilizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -94,15 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def test_algorithm(alg):\n",
-    "    game = Game([Card.KING, Card.QUEEN, Card.JACK, 0, 0])\n",
-    "    print game.view_board()\n",
+    "    game = Game()\n",
     "    while game.move_count < 120 and not game.win_condition():\n",
     "        game.move(*alg(game.view_board()))\n",
     "    if game.win_condition():\n",
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -121,20 +120,17 @@
    "source": [
     "def test_all_starts(alg):\n",
     "    loss_win =[0,0]\n",
-    "    loss_win_2 =[0,0]\n",
     "    for start in itertools.permutations([Card.KING, Card.QUEEN, Card.JACK, 0, 0]):\n",
     "        game = Game(start)\n",
-    "        loss_win_2[game.win_condition()] += 1\n",
-    "        while game.move_count < 1000 and not game.win_condition():\n",
+    "        while game.move_count < 120 and not game.win_condition():\n",
     "            game.move(*alg(game.view_board()))\n",
     "        loss_win[game.win_condition()] += 1\n",
-    "    print \"Won: %d\\nLost: %d\" % (loss_win[True], loss_win[False]) \n",
-    "    print \"Won: %d\\nLost: %d\" % (loss_win_2[True], loss_win_2[False]) "
+    "    print \"Won: %d\\nLost: %d\" % (loss_win[True], loss_win[False]) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -147,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -156,10 +152,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Won: 115\n",
-      "Lost: 5\n",
-      "Won: 2\n",
-      "Lost: 118\n"
+      "Won: 46\n",
+      "Lost: 74\n"
      ]
     }
    ],
@@ -169,26 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: 'K', 1: None, 2: None}\n",
-      "CONGRATS YOU WON!\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,90 +182,6 @@
    "source": [
     "test_algorithm(random_move)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<itertools.permutations at 0x1057ecd10>"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "itertools.permutations([Card.KING, Card.QUEEN, Card.JACK, 0, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(Card.KING, Card.QUEEN, Card.JACK, 0, 0) in itertools.permutations([Card.KING, Card.QUEEN, Card.JACK, 0, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "perms = itertools.permutations([Card.KING, Card.QUEEN, Card.JACK, 0, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tuple"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
