try terrible startegy that only succeeds if initial board win condition

--- a/conway_immobilizer.ipynb
+++ b/conway_immobilizer.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +68,7 @@
     "    \n",
     "    def view_board(self):\n",
     "        return {pos: get_or_none(self._piles[pos]) for pos in [Pos.LEFT, Pos.CENTER, Pos.RIGHT]} \n",
-    "    \n",
+    "        \n",
     "    def win_condition(self):\n",
     "        return self._piles[Pos.LEFT] == [Card.KING, Card.QUEEN, Card.JACK]\n",
     "    \n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -120,7 +120,7 @@
    "source": [
     "def test_all_starts(alg):\n",
     "    loss_win =[0,0]\n",
-    "    for start in itertools.permutations([Card.KING, Card.QUEEN, Card.JACK, 0, 0]):\n",
+    "    for start in set(itertools.permutations([Card.KING, Card.QUEEN, Card.JACK, 0, 0])):\n",
     "        game = Game(start)\n",
     "        while game.move_count < 120 and not game.win_condition():\n",
     "            game.move(*alg(game.view_board()))\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -152,8 +152,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Won: 46\n",
-      "Lost: 74\n"
+      "Won: 18\n",
+      "Lost: 42\n"
      ]
     }
    ],
@@ -163,7 +163,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONGRATS YOU WON!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_algorithm(random_move)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def strategy1(state):\n",
+    "    strat = {('Q', 'J', None): (Pos.LEFT, Pos.RIGHT),\n",
+    " (None, 'K', None): (Pos.CENTER, Pos.RIGHT),\n",
+    " (None, 'K', 'J'): (Pos.RIGHT, Pos.LEFT),\n",
+    " ('Q', 'K', None): (Pos.CENTER, Pos.RIGHT),\n",
+    " ('Q', None, 'J'): (Pos.LEFT, Pos.CENTER),\n",
+    " ('J', None, None): (Pos.LEFT, Pos.CENTER),\n",
+    " (None, 'Q', None): (Pos.CENTER, Pos.RIGHT),\n",
+    " ('Q', 'K', 'J'): (Pos.LEFT, Pos.CENTER),\n",
+    " ('J', None, 'K'): (Pos.LEFT, Pos.CENTER),\n",
+    " ('K', 'Q', None): (Pos.CENTER, Pos.RIGHT),\n",
+    " ('K', 'Q', 'J'): (Pos.LEFT, Pos.CENTER),\n",
+    " ('K', 'J', None): (Pos.LEFT, Pos.CENTER),\n",
+    " (None, None, 'Q'): (Pos.CENTER, Pos.RIGHT),\n",
+    " ('Q', 'J', 'K'): (Pos.LEFT, Pos.RIGHT),\n",
+    " ('J', 'K', 'Q'): (Pos.RIGHT, Pos.LEFT),\n",
+    " ('Q', None, None):(Pos.LEFT, Pos.CENTER),\n",
+    " (None, 'J', None): (Pos.CENTER, Pos.LEFT),\n",
+    " (None, 'Q', 'K'): (Pos.RIGHT, Pos.LEFT),\n",
+    " (None, 'Q', 'J'): (Pos.RIGHT, Pos.LEFT),\n",
+    " ('K', None, None):(Pos.LEFT, Pos.CENTER),\n",
+    " ('K', 'J', 'Q'): (Pos.LEFT, Pos.RIGHT),\n",
+    " (None, 'J', 'Q'): (Pos.CENTER, Pos.LEFT),\n",
+    " ('K', None, 'Q'): (Pos.LEFT, Pos.CENTER),\n",
+    " (None, None, 'J'): (Pos.RIGHT, Pos.LEFT),\n",
+    " ('J', 'Q', None): (Pos.CENTER, Pos.RIGHT),\n",
+    " (None, None, 'K'): (Pos.CENTER, Pos.RIGHT),\n",
+    " ('J', 'K', None): (Pos.CENTER, Pos.RIGHT),\n",
+    " ('J', None, 'Q'): (Pos.LEFT, Pos.CENTER),\n",
+    " ('J', 'Q', 'K'): (Pos.CENTER, Pos.LEFT),\n",
+    " ('K', None, 'J'): (Pos.LEFT, Pos.CENTER),\n",
+    " (None, 'K', 'Q'): (Pos.RIGHT, Pos.LEFT),\n",
+    " (None, 'J', 'K'): (Pos.CENTER, Pos.LEFT),\n",
+    " ('Q', None, 'K'): (Pos.RIGHT, Pos.CENTER)}\n",
+    "    return strat[tuple(state.values())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Won: 1\n",
+      "Lost: 59\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_all_starts(strategy1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "g = Game()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -171,16 +285,127 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "[None, 'Q', 'K']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_algorithm(random_move)"
+    "g.get_state()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(filter(None, g.view_board()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def all_boards():\n",
+    "    boards = set(itertools.permutations([Card.KING, Card.QUEEN, Card.JACK, None, None], r=3))\n",
+    "    return map(lambda x: {Pos.LEFT: x[0], Pos.CENTER: x[1], Pos.RIGHT: x[2]}, boards)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(all_boards())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Q', 'J', None],\n",
+       " [None, 'K', None],\n",
+       " [None, 'K', 'J'],\n",
+       " ['Q', 'K', None],\n",
+       " ['Q', None, 'J'],\n",
+       " ['J', None, None],\n",
+       " [None, 'Q', None],\n",
+       " ['Q', 'K', 'J'],\n",
+       " ['J', None, 'K'],\n",
+       " ['K', 'Q', None],\n",
+       " ['K', 'Q', 'J'],\n",
+       " ['K', 'J', None],\n",
+       " [None, None, 'Q'],\n",
+       " ['Q', 'J', 'K'],\n",
+       " ['J', 'K', 'Q'],\n",
+       " ['Q', None, None],\n",
+       " [None, 'J', None],\n",
+       " [None, 'Q', 'K'],\n",
+       " [None, 'Q', 'J'],\n",
+       " ['K', None, None],\n",
+       " ['K', 'J', 'Q'],\n",
+       " [None, 'J', 'Q'],\n",
+       " ['K', None, 'Q'],\n",
+       " [None, None, 'J'],\n",
+       " ['J', 'Q', None],\n",
+       " [None, None, 'K'],\n",
+       " ['J', 'K', None],\n",
+       " ['J', None, 'Q'],\n",
+       " ['J', 'Q', 'K'],\n",
+       " ['K', None, 'J'],\n",
+       " [None, 'K', 'Q'],\n",
+       " [None, 'J', 'K'],\n",
+       " ['Q', None, 'K']]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map(list, set(itertools.permutations([Card.KING, Card.QUEEN, Card.JACK, None, None], r=3)))"
    ]
   },
   {
