fix tiny issue to win about half of cases

--- a/conway_immobilizer.ipynb
+++ b/conway_immobilizer.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -231,13 +231,13 @@
     " ('K', None, 'J'): (Pos.LEFT, Pos.CENTER),\n",
     " (None, 'K', 'Q'): (Pos.RIGHT, Pos.LEFT),\n",
     " (None, 'J', 'K'): (Pos.CENTER, Pos.LEFT),\n",
-    " ('Q', None, 'K'): (Pos.RIGHT, Pos.CENTER)}\n",
+    " ('Q', None, 'K'): (Pos.RIGHT, Pos.LEFT)}\n",
     "    return strat[tuple(state.values())]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -246,8 +246,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Won: 1\n",
-      "Lost: 59\n"
+      "Won: 32\n",
+      "Lost: 28\n"
      ]
     }
    ],
